# ml-lr3

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  sds
cli/: pipeline.py
cli/models/services/: file.py  s3.py
cli/models/use_cases/: data_processing.py  download_data_from_bucket.py  load_data_in_bucket.py
cli/models/utils/: s3_client.py
docker/: docker-compose.infra.yml
docs/: mkdocs.yml
docs/docs/: index.md
lr3/: __init__.py  dataset.py  features.py  plots.py
lr3/modeling/: predict.py  train.py
scripts/: pipeline.sh
