[tool.poetry]
name = "lr3"
version = "0.1.0"
description = ""
authors = ["Anton <xoore4ik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
s3 = "^3.0.0"
boto3 = "^1.35.55"
pydantic-settings = "^2.6.1"
numpy = "^2.1.3"
pandas = "^2.2.3"
click = "^8.1.7"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
